--- a/categories.html
+++ b/categories.html
@@ -10,10 +10,12 @@
         <header id="banner" class="body">
                 <h1><a href="/">Kelly's Notebook </a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on Kelly's Notebook</h1>
     <ul>
+        <li><a href="/category/misc.html">misc</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
