--- a/tags.html
+++ b/tags.html
@@ -10,12 +10,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Kelly's Notebook </a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for Kelly's Notebook</h1>
     <ul>
+        <li><a href="/tag/first.html">first</a> (1)</li>
+        <li><a href="/tag/misc.html">misc</a> (1)</li>
     </ul>
 </section>
 
