--- a/My-first-post.html
+++ b/My-first-post.html
@@ -4,8 +4,6 @@
         <meta charset="utf-8" />
         <title>My first post</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-      <link rel="alternate" hreflang="english" href="/My-first-post.html">
-
 </head>
 
 <body id="index" class="home">
@@ -37,9 +35,7 @@
                 By                         <a class="url fn" href="/author/your-name.html">Your name</a>
         </address>
 <p>In <a href="/category/misc.html">misc</a>.</p>
-<p>tags: <a href="/tag/first.html">first</a> <a href="/tag/misc.html">misc</a> </p>Translations:
-        <a href="/My-first-post.html" hreflang="english">english</a>
-
+<p>tags: <a href="/tag/first.html">first</a> <a href="/tag/misc.html">misc</a> </p>
 </footer><!-- /.post-info -->      <p>This is the <em>first post</em> from my Pelican blog. <strong>YAY!</strong></p>
     </div><!-- /.entry-content -->
 
