--- a/archives.html
+++ b/archives.html
@@ -76,6 +76,9 @@
         </span><!-- end of .site-name -->
       </div><!-- end of #logo -->
         <div class="tagline">
+                <a href="/tag/first.html" >first (1)</a> &#124; 
+                <a href="/tag/misc.html" >misc (2)</a> &#124; 
+                <a href="/archives.html" class="active">Archives (2)</a>
         </div>
     </div>
 
