--- a/authors.html
+++ b/authors.html
@@ -12,14 +12,14 @@
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" media="all">
-  <link rel="stylesheet" href="/theme/css/font.css" type="text/css" media="all">
+  <link rel="stylesheet" href="kellysnotebook.com/theme/css/font.css" type="text/css" media="all">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/theme/css/style.css" type="text/css" media="all">
+  <link rel="stylesheet" href="kellysnotebook.com/theme/css/style.css" type="text/css" media="all">
 
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/theme/js/functions.min.js"></script>
+  <script type="text/javascript" src="kellysnotebook.com/theme/js/functions.min.js"></script>
 
   
  
@@ -72,13 +72,13 @@
 
       <div class="container">
       <div id="logo">
-        <span class="site-name"><a class="navbar-brand" href=""><img width="310" src="" class="attachment-full size-full" alt="logo">          </a>
+        <span class="site-name"><a class="navbar-brand" href="kellysnotebook.com"><img width="310" src="https://avatars1.githubusercontent.com/u/4553650?s=400&u=ed4a46a23eac9c188c95e48a93e97321a500a54a&v=4" class="attachment-full size-full" alt="logo">          </a>
         </span><!-- end of .site-name -->
       </div><!-- end of #logo -->
         <div class="tagline">
-                <a href="/tag/first.html" >first (1)</a> &#124; 
-                <a href="/tag/misc.html" >misc (2)</a> &#124; 
-                <a href="/archives.html" >Archives (2)</a>
+                <a href="kellysnotebook.com/tag/first.html" >first (1)</a> &#124; 
+                <a href="kellysnotebook.com/tag/misc.html" >misc (2)</a> &#124; 
+                <a href="kellysnotebook.com/archives.html" >Archives (2)</a>
         </div>
     </div>
 
@@ -94,7 +94,7 @@
 <article>
   <div class="article_text">
     <ul>
-      <li><a href="/author/your-name.html">Your name</a> (2)</li>
+      <li><a href="kellysnotebook.com/author/your-name.html">Your name</a> (2)</li>
     </ul>
   </div>
 </article>
@@ -114,11 +114,11 @@
       <div class="site-info container">
         <div class="row">
                     <div class="copyright col-md-12">
-                    <a href="/pages/privacy-policy">Privacy Policy</a> | 
-                    <a href="/feeds/all.atom.xml">Atom Feed</a> | 
-                    <a href="/sitemap.xml">Sitemap</a><br />
+                    <a href="kellysnotebook.com/pages/privacy-policy">Privacy Policy</a> | 
+                    <a href="kellysnotebook.com/feeds/all.atom.xml">Atom Feed</a> | 
+                    <a href="kellysnotebook.com/sitemap.xml">Sitemap</a><br />
                     This site uses the <a href="https://github.com/limbenjamin/voce">voce</a> theme by <a href="//limbenjamin.com/">Benjamin Lim</a><br />
-                    &copy; 2012-2016 <a href="">Kelly Richardson</a> </div>
+                    &copy; 2012-2016 <a href="kellysnotebook.com">Kelly Richardson</a> </div>
         </div>
       </div><!-- .site-info -->
       <div class="scroll-to-top" style="display: none;"><i class="fa fa-angle-up"></i></div><!-- .scroll-to-top -->
